--- a/Presentacion/MainWindow.xaml
+++ b/Presentacion/MainWindow.xaml
@@ -5,8 +5,28 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Presentacion"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
-    <Grid>
-        
+        Title="MainWindow" Height="800" Width="800">
+
+
+    <Grid x:Name="supermercado">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition Width="0*"/>
+        </Grid.ColumnDefinitions>
+        <Label Name="lbl_run" Content="Run" HorizontalAlignment="Left" Margin="52,35,0,0" VerticalAlignment="Top" Height="26" Width="31"/>
+        <TextBox x:Name="run_txt" HorizontalAlignment="Left" Height="23" Margin="177,35,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <Label Name="lbl_firstname" Content="Nombre" HorizontalAlignment="Left" Margin="52,74,0,0" VerticalAlignment="Top" Height="26" Width="54"/>
+        <TextBox x:Name="nombre_txt" HorizontalAlignment="Left" Height="23" Margin="177,74,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <Label Name="lbl_producto" Content="Producto" HorizontalAlignment="Left" Margin="52,108,0,0" VerticalAlignment="Top" Height="26" Width="58"/>
+        <Label Name="lbl_cantidad" Content="Cantidad" HorizontalAlignment="Left" Margin="52,142,0,0" VerticalAlignment="Top" Height="26" Width="58"/>
+        <TextBox x:Name="cantidad_txt" HorizontalAlignment="Left" Height="23" Margin="177,142,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <Label x:Name="lbl_message_error" Content="" HorizontalAlignment="Left" Margin="52,250,0,0" VerticalAlignment="Top" Width="534" Height="26"/>
+        <ComboBox x:Name="producto_cbx" HorizontalAlignment="Left" Margin="177,108,0,0" VerticalAlignment="Top" Width="120" Height="22"/>
+        <DataGrid x:Name="lista_dgd" HorizontalAlignment="Left" Height="559" Margin="52,191,0,0" VerticalAlignment="Top" Width="675" SelectionChanged="lista_dgd_SelectionChanged"/>
+        <Button x:Name="calcular_venta_btn" Content="Calcular ventas" Margin="429,146,168,0" VerticalAlignment="Top" Height="22"/>
+        <Button x:Name="Agregar_btn" Content="agregar" HorizontalAlignment="Left" Margin="325,142,0,0" VerticalAlignment="Top" Width="75" Height="22" Click="Agregar_btn_Click"/>
+        <Button x:Name="comprar_btn" Content="Comprar" HorizontalAlignment="Left" Margin="652,148,0,0" VerticalAlignment="Top" Width="75" Click="button_Copy1_Click" Height="22"/>
+
     </Grid>
 </Window>
+
